--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-next",
+  "name": "POC",
   "version": "1.0.0",
-  "description": "node + mongodb + ejs",
+  "description": "记录生活的点点滴滴",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "istanbul cover node_modules/mocha/bin/_mocha"
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +23,8 @@
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5"
   }
 }
